<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/select_from_phone"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="6dp"
        card_view:contentPadding="4dp">

      <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/select_phone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/main_phone_chooser"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

      </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/select_from_picasa"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="6dp"
        card_view:contentPadding="4dp">

      <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/select_picasa"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/main_picasa_chooser"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

      </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/select_from_facebook"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="6dp"
        card_view:contentPadding="4dp">

      <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/select_facebook"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/main_facebook_chooser"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

      </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/launch_config"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:visibility="gone"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="6dp"
        card_view:contentPadding="4dp">


      <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/select_face"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/launch_config_app"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

      </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/about"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="6dp"
        card_view:contentPadding="4dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="10dp"
          android:text="@string/about_app"
          android:textAppearance="?android:attr/textAppearanceMedium"/>

    </android.support.v7.widget.CardView>
  </LinearLayout>

</ScrollView>

